# advent-of-code

./: .gitignore  README.md
04-passport-processing/: passport-processing-re.rb  sl-passport-processing.rb
09-encoding-error/: encoding-error.rb
10-adapter-array/: adapter-array.rb
11/: day11.cpp
14/: day14a.rb
15/: day15.rb
17/: day17.rb
20/: day20.rb
2015/01/: day01.rb
2015/02/: day02.rb
2015/03/: day03a.rb  day03b.rb
2015/04/: day04.rb
2015/05/: day05.rb
2015/06/: day06.rb
2015/07/: day07.rb
2015/08/: day08.rb
2015/09/: day09.rb
2015/10/: day10.rb
2015/11/: day11.md
2015/12/: day12a.rb  day12b.rb
2015/13/: day13.rb
2015/14/: day14.rb
2015/15/: day15.rb
2015/16/: day16.rb
2015/17/: day17.rb
2015/18/: day18a.rb  day18b.rb
2015/19/: day19.rb  day19a.rb  day19b.rb
2015/20/: day20a.wl  day20b.wl
2015/21/: day21.rb
2015/22/: day22.cpp
2015/23/: day23.rb
2015/24/: day24.rb  day24old.rb
2015/25/: day25.wl
2015/cpp/: CMakeLists.txt  timer.hpp
2016/01/: day01.rb  day01a.rb  day01b.rb
2016/02/: day02.rb
2016/03/: day03a.rb  day03b.rb
2016/04/: day04.rb
2016/05/: day05a.rb  day05b.rb
2016/06/: day06.rb
2016/07/: day07.rb
2016/08/: day08.cpp
2016/09/: day09.rb
2016/10/: day10.rb
2016/11/: day11.cpp
2016/12/: day12.rb
2016/13/: day13.rb
2016/14/: day14.rb
2016/15/: day15.wl
2016/16/: day16.rb
2016/17/: day17.rb
2016/18/: day18.rb  (+1 more)
2016/cpp/: CMakeLists.txt
2020/: .gitignore  rank.txt
2021/: stats.txt
2021/cpp/: CMakeLists.txt
2022/: stats.txt
2022/cpp/: CMakeLists.txt
2023/: stats.txt
2024/: stats.txt
2024/cpp/: CMakeLists.txt
21/: day21.rb
23/: day23.cpp
cpp/: CMakeLists.txt
sandbox/: golf-dirs.rb
tpl/: tpl.rb
(+230 files in other folders)
